Step 2: The Blocks

--- a/lang/de_DE.lang
+++ b/lang/de_DE.lang
@@ -55,141 +55,141 @@ item.extrautils:watering_can.name=Gießkanne
 
 
 itemGroup.extraUtil=Extra Utilities
-itemGroup.extraUtil_FMP=Extra Utilities Microblocks
+itemGroup.extraUtil_FMP=Extra Utilities: Mikroblöcke
 
 tile.extrautils:.name=
 
-tile.extrautils:angelBlock.name=Angel Block
-tile.extrautils:budoff.0.name=Block Update Detector
-tile.extrautils:budoff.3.name=Block Update Detector (Advanced)
-tile.extrautils:colorStoneBrick.0.name=Colored Stone Bricks (White)
-tile.extrautils:colorStoneBrick.1.name=Colored Stone Bricks (Orange)
-tile.extrautils:colorStoneBrick.2.name=Colored Stone Bricks (Magenta)
-tile.extrautils:colorStoneBrick.3.name=Colored Stone Bricks (Light Blue)
-tile.extrautils:colorStoneBrick.4.name=Colored Stone Bricks (Yellow)
-tile.extrautils:colorStoneBrick.5.name=Colored Stone Bricks (Lime)
-tile.extrautils:colorStoneBrick.6.name=Colored Stone Bricks (Pink)
-tile.extrautils:colorStoneBrick.7.name=Colored Stone Bricks (Gray)
-tile.extrautils:colorStoneBrick.8.name=Colored Stone Bricks (Light Gray)
-tile.extrautils:colorStoneBrick.9.name=Colored Stone Bricks (Cyan)
-tile.extrautils:colorStoneBrick.10.name=Colored Stone Bricks (Purple)
-tile.extrautils:colorStoneBrick.11.name=Colored Stone Bricks (Blue)
-tile.extrautils:colorStoneBrick.12.name=Colored Stone Bricks (Brown)
-tile.extrautils:colorStoneBrick.13.name=Colored Stone Bricks (Green)
-tile.extrautils:colorStoneBrick.14.name=Colored Stone Bricks (Red)
-tile.extrautils:colorStoneBrick.15.name=Colored Stone Bricks (Black)
+tile.extrautils:angelBlock.name=Engelsblock
+tile.extrautils:budoff.0.name=Block-Update-Detektor
+tile.extrautils:budoff.3.name=Block-Update-Detektor (Fortgeschritten)
+tile.extrautils:colorStoneBrick.0.name=Bemalte Steinziegel (Weiß)
+tile.extrautils:colorStoneBrick.1.name=Bemalte Steinziegel (Orange)
+tile.extrautils:colorStoneBrick.2.name=Bemalte Steinziegel (Magenta)
+tile.extrautils:colorStoneBrick.3.name=Bemalte Steinziegel (Hellblau)
+tile.extrautils:colorStoneBrick.4.name=Bemalte Steinziegel (Gelb)
+tile.extrautils:colorStoneBrick.5.name=Bemalte Steinziegel (Hellgrüm)
+tile.extrautils:colorStoneBrick.6.name=Bemalte Steinziegel (Pink)
+tile.extrautils:colorStoneBrick.7.name=Bemalte Steinziegel (Grau)
+tile.extrautils:colorStoneBrick.8.name=Bemalte Steinziegel (Hellgrau)
+tile.extrautils:colorStoneBrick.9.name=Bemalte Steinziegel (Türkis)
+tile.extrautils:colorStoneBrick.10.name=Bemalte Steinziegel (Violett)
+tile.extrautils:colorStoneBrick.11.name=Bemalte Steinziegel (Blau)
+tile.extrautils:colorStoneBrick.12.name=Bemalte Steinziegel (Braun)
+tile.extrautils:colorStoneBrick.13.name=Bemalte Steinziegel (Grün)
+tile.extrautils:colorStoneBrick.14.name=Bemalte Steinziegel (Rot)
+tile.extrautils:colorStoneBrick.15.name=Bemalte Steinziegel (Schwarz)
 
-tile.extrautils:colorWoodPlanks.0.name=Colored Wood Planks (White)
-tile.extrautils:colorWoodPlanks.1.name=Colored Wood Planks (Orange)
-tile.extrautils:colorWoodPlanks.2.name=Colored Wood Planks (Magenta)
-tile.extrautils:colorWoodPlanks.3.name=Colored Wood Planks (Light Blue)
-tile.extrautils:colorWoodPlanks.4.name=Colored Wood Planks (Yellow)
-tile.extrautils:colorWoodPlanks.5.name=Colored Wood Planks (Lime)
-tile.extrautils:colorWoodPlanks.6.name=Colored Wood Planks (Pink)
-tile.extrautils:colorWoodPlanks.7.name=Colored Wood Planks (Gray)
-tile.extrautils:colorWoodPlanks.8.name=Colored Wood Planks (Light Gray)
-tile.extrautils:colorWoodPlanks.9.name=Colored Wood Planks (Cyan)
-tile.extrautils:colorWoodPlanks.10.name=Colored Wood Planks (Purple)
-tile.extrautils:colorWoodPlanks.11.name=Colored Wood Planks (Blue)
-tile.extrautils:colorWoodPlanks.12.name=Colored Wood Planks (Brown)
-tile.extrautils:colorWoodPlanks.13.name=Colored Wood Planks (Green)
-tile.extrautils:colorWoodPlanks.14.name=Colored Wood Planks (Red)
-tile.extrautils:colorWoodPlanks.15.name=Colored Wood Planks (Black)
+tile.extrautils:colorWoodPlanks.0.name=Bemalte Holzbretter (Weiß)
+tile.extrautils:colorWoodPlanks.1.name=Bemalte Holzbretter (Orange)
+tile.extrautils:colorWoodPlanks.2.name=Bemalte Holzbretter (Magenta)
+tile.extrautils:colorWoodPlanks.3.name=Bemalte Holzbretter (Hellblau)
+tile.extrautils:colorWoodPlanks.4.name=Bemalte Holzbretter (Gelb)
+tile.extrautils:colorWoodPlanks.5.name=Bemalte Holzbretter (Hellgrün)
+tile.extrautils:colorWoodPlanks.6.name=Bemalte Holzbretter (Pink)
+tile.extrautils:colorWoodPlanks.7.name=Bemalte Holzbretter (Grau)
+tile.extrautils:colorWoodPlanks.8.name=Bemalte Holzbretter (Hellgrau)
+tile.extrautils:colorWoodPlanks.9.name=Bemalte Holzbretter (Türkis)
+tile.extrautils:colorWoodPlanks.10.name=Bemalte Holzbretter (Violett)
+tile.extrautils:colorWoodPlanks.11.name=Bemalte Holzbretter (Blau)
+tile.extrautils:colorWoodPlanks.12.name=Bemalte Holzbretter (Braun)
+tile.extrautils:colorWoodPlanks.13.name=Bemalte Holzbretter (Grün)
+tile.extrautils:colorWoodPlanks.14.name=Bemalte Holzbretter (Rot)
+tile.extrautils:colorWoodPlanks.15.name=Bemalte Holzbretter (Schwarz)
 
-tile.extrautils:chandelier.name=Chandelier
+tile.extrautils:chandelier.name=Kronleuchter
 
-tile.extrautils:cobblestone_compressed.0.name=Compressed Cobblestone
-tile.extrautils:cobblestone_compressed.1.name=Double Compressed Cobblestone
-tile.extrautils:cobblestone_compressed.10.name=Triple Compressed Dirt
-tile.extrautils:cobblestone_compressed.11.name=Quadruple Compressed Dirt
-tile.extrautils:cobblestone_compressed.12.name=Compressed Gravel
-tile.extrautils:cobblestone_compressed.13.name=Double Compressed Gravel
-tile.extrautils:cobblestone_compressed.14.name=Compressed Sand
-tile.extrautils:cobblestone_compressed.15.name=Double Compressed Sand
-tile.extrautils:cobblestone_compressed.2.name=Triple Compressed Cobblestone
-tile.extrautils:cobblestone_compressed.3.name=Quadruple Compressed Cobblestone
-tile.extrautils:cobblestone_compressed.4.name=Quintuple Compressed Cobblestone
-tile.extrautils:cobblestone_compressed.5.name=Sextuple Compressed Cobblestone
-tile.extrautils:cobblestone_compressed.6.name=Septuple Compressed Cobblestone
-tile.extrautils:cobblestone_compressed.7.name=Octuple Compressed Cobblestone
-tile.extrautils:cobblestone_compressed.8.name=Compressed Dirt
-tile.extrautils:cobblestone_compressed.9.name=Double Compressed Dirt
-tile.extrautils:conveyor.name=Conveyor Belt
-tile.extrautils:cursedearthside.name=Cursed Earth
-tile.extrautils:curtains.name=Blackout Curtains
-tile.extrautils:dark_portal.name=Portal to the 'Deep Dark'
-tile.extrautils:decorativeBlock1.0.name=Edged Stone Bricks
-tile.extrautils:decorativeBlock1.1.name=Ender-infused Obsidian
-tile.extrautils:decorativeBlock1.10.name=Gravel Road
-tile.extrautils:decorativeBlock1.11.name=Ender Core
-tile.extrautils:decorativeBlock1.12.name=Diamond-Etched Computational Matrix
-tile.extrautils:decorativeBlock1.2.name=Burnt Quartz
-tile.extrautils:decorativeBlock1.3.name=Frosted Stone
-tile.extrautils:decorativeBlock1.4.name=Border Stone
-tile.extrautils:decorativeBlock1.5.name=Unstable Ingot Block
-tile.extrautils:decorativeBlock1.6.name=Gravel Bricks
-tile.extrautils:decorativeBlock1.7.name=Border Stone (Alternate)
-tile.extrautils:decorativeBlock1.8.name=Magical Wood
-tile.extrautils:decorativeBlock1.9.name=Sandy Glass
-tile.extrautils:decorativeBlock2.0.name=Thickened Glass
-tile.extrautils:decorativeBlock2.1.name=Edged Glass
-tile.extrautils:decorativeBlock2.10.name=Dark Glass
-tile.extrautils:decorativeBlock2.2.name=Glass Bricks
-tile.extrautils:decorativeBlock2.3.name=Carved Glass
-tile.extrautils:decorativeBlock2.4.name=Golden Edged Glass
-tile.extrautils:decorativeBlock2.5.name=Obsidian Glass
-tile.extrautils:decorativeBlock2.6.name=Swirling Glass
-tile.extrautils:decorativeBlock2.7.name=Glowstone Glass
-tile.extrautils:decorativeBlock2.8.name=Heart Glass
-tile.extrautils:decorativeBlock2.9.name=Square Glass
-tile.extrautils:drum.0.name=Drum
-tile.extrautils:drum.1.name=Bedrockium Drum
-tile.extrautils:enderQuarry.name=Ender Quarry
-tile.extrautils:enderThermicPump.name=Ender-Thermic Pump
+tile.extrautils:cobblestone_compressed.0.name=Komprimierter Pflasterstein
+tile.extrautils:cobblestone_compressed.1.name=Doppelt Komprimierter Pflasterstein
+tile.extrautils:cobblestone_compressed.10.name=Dreifach Komprimierte Erde
+tile.extrautils:cobblestone_compressed.11.name=Vierfach Komprimierte Erde
+tile.extrautils:cobblestone_compressed.12.name=Komprimierter Kies
+tile.extrautils:cobblestone_compressed.13.name=Doppelt Komprimierter Kies
+tile.extrautils:cobblestone_compressed.14.name=Komprimierter Sand
+tile.extrautils:cobblestone_compressed.15.name=Doppelt Komprimierter Sand
+tile.extrautils:cobblestone_compressed.2.name=Dreifach Komprimierter Pflasterstein
+tile.extrautils:cobblestone_compressed.3.name=Vierfach Komprimierter Pflasterstein
+tile.extrautils:cobblestone_compressed.4.name=Fünffach Komprimierter Pflasterstein
+tile.extrautils:cobblestone_compressed.5.name=Sechsfach Komprimierter Pflasterstein
+tile.extrautils:cobblestone_compressed.6.name=Siebenfach Komprimierter Pflasterstein
+tile.extrautils:cobblestone_compressed.7.name=Achtfach Komprimierter Pflasterstein
+tile.extrautils:cobblestone_compressed.8.name=Komprimierte Erde
+tile.extrautils:cobblestone_compressed.9.name=Doppelt Komprimierte Erde
+tile.extrautils:conveyor.name=Fließband
+tile.extrautils:cursedearthside.name=Verfluchte Erde
+tile.extrautils:curtains.name=Verdunkelungsvorhang
+tile.extrautils:dark_portal.name=Portal zur 'Deep Dark'
+tile.extrautils:decorativeBlock1.0.name=Umrandete Steinziegel
+tile.extrautils:decorativeBlock1.1.name=Ender-infundiertes Obsidian
+tile.extrautils:decorativeBlock1.10.name=Kiesstraße
+tile.extrautils:decorativeBlock1.11.name=Enderkern
+tile.extrautils:decorativeBlock1.12.name=Diamantgeätzte Rechenmatrix
+tile.extrautils:decorativeBlock1.2.name=Verbranntes Quarz
+tile.extrautils:decorativeBlock1.3.name=Gefrorener Stein
+tile.extrautils:decorativeBlock1.4.name=Grenzstein
+tile.extrautils:decorativeBlock1.5.name=Labiler Barrenblock
+tile.extrautils:decorativeBlock1.6.name=Kiesziegel
+tile.extrautils:decorativeBlock1.7.name=Grenzstein (Alternativ)
+tile.extrautils:decorativeBlock1.8.name=Magisches Holz
+tile.extrautils:decorativeBlock1.9.name=Sandiges Glas
+tile.extrautils:decorativeBlock2.0.name=Verdichtetes Glas
+tile.extrautils:decorativeBlock2.1.name=Umrandetes Glas
+tile.extrautils:decorativeBlock2.10.name=Dunkles Glas
+tile.extrautils:decorativeBlock2.2.name=Glasziegel
+tile.extrautils:decorativeBlock2.3.name=Gemeißeltes Glas
+tile.extrautils:decorativeBlock2.4.name=Golden Umrandetes Glas
+tile.extrautils:decorativeBlock2.5.name=Obsidianglas
+tile.extrautils:decorativeBlock2.6.name=Wirbelglas
+tile.extrautils:decorativeBlock2.7.name=Glowstone-Glas
+tile.extrautils:decorativeBlock2.8.name=Herzglas
+tile.extrautils:decorativeBlock2.9.name=Quadratglas
+tile.extrautils:drum.0.name=Trommel
+tile.extrautils:drum.1.name=Bedrockiumtrommel
+tile.extrautils:enderQuarry.name=Endersteinbruch
+tile.extrautils:enderThermicPump.name=Ender-Thermiepumpe
 tile.extrautils:endMarker.name=Ender-Marker
-tile.extrautils:etherealglass.name=Ethereal Glass
-tile.extrautils:extractor_base.0.name=Transfer Node (Items)
-tile.extrautils:extractor_base.12.name=Transfer Node (Energy)
-tile.extrautils:extractor_base.6.name=Transfer Node (Liquids)
-tile.extrautils:extractor_base_remote.0.name=Retrieval Node (Items)
-tile.extrautils:extractor_base_remote.6.name=Retrieval Node (Liquids)
-tile.extrautils:filing.0.name=Filing Cabinet
-tile.extrautils:filing.1.name=Filing Cabinet (Advanced)
-tile.extrautils:filing.name=Filing Cabinet
-tile.extrautils:generator.0.name=Survivalist Generator
-tile.extrautils:generator.1.name=Furnace Generator
-tile.extrautils:generator.10.name=High-temperature Furnace Generator
-tile.extrautils:generator.11.name=Nether Star Generator
-tile.extrautils:generator.2.name=Lava Generator
-tile.extrautils:generator.3.name=Ender Generator
-tile.extrautils:generator.4.name=Heated Redstone Generator
-tile.extrautils:generator.5.name=Culinary Generator
-tile.extrautils:generator.6.name=Potions Generator
-tile.extrautils:generator.7.name=Solar Generator
-tile.extrautils:generator.8.name=TNT Generator
-tile.extrautils:generator.9.name=Pink Generator
+tile.extrautils:etherealglass.name=Ätherisches Glas
+tile.extrautils:extractor_base.0.name=Transfernodie (Items)
+tile.extrautils:extractor_base.12.name=Transfernodie (Energie)
+tile.extrautils:extractor_base.6.name=Transfernodie (Flüssigkeiten)
+tile.extrautils:extractor_base_remote.0.name=Anziehungsnodie (Items)
+tile.extrautils:extractor_base_remote.6.name=Anziehungsnodie (Flüssigkeiten)
+tile.extrautils:filing.0.name=Aktenschrank
+tile.extrautils:filing.1.name=Aktenschrank (Fortgeschritten)
+tile.extrautils:filing.name=Aktenschrank
+tile.extrautils:generator.0.name=Generator des Überlebenskünstlers
+tile.extrautils:generator.1.name=Ofengenerator
+tile.extrautils:generator.10.name=Hoch-temperierter Ofengenerator
+tile.extrautils:generator.11.name=Nethersterngenerator
+tile.extrautils:generator.2.name=Lavagenerator
+tile.extrautils:generator.3.name=Endergenerator
+tile.extrautils:generator.4.name=Beheizter Redstone-Generator
+tile.extrautils:generator.5.name=Kulinarischer Generator
+tile.extrautils:generator.6.name=Trankgenerator
+tile.extrautils:generator.7.name=Solargenerator
+tile.extrautils:generator.8.name=TNT-Generator
+tile.extrautils:generator.9.name=Pink-Generator
 tile.extrautils:greenscreen.name=Green Screen
-tile.extrautils:magnumTorch.name=Magnum Torch
-tile.extrautils:peaceful_table_top.name=Peaceful Table
-tile.extrautils:pipes.0.name=Transfer Pipe
-tile.extrautils:pipes.10.name=Rationing Pipe
-tile.extrautils:pipes.11.name=Energy Pipe
-tile.extrautils:pipes.12.name=Crossover Pipe
-tile.extrautils:pipes.13.name=Mod Sorting Pipe
-tile.extrautils:pipes.14.name=Energy Extraction Pipe
-tile.extrautils:pipes.8.name=Sorting Pipe
-tile.extrautils:pipes.9.name=Filter Pipe
-tile.extrautils:plant/ender_lilly.name=Ender-Lily Seeds
-tile.extrautils:sound_muffler.0.name=Sound Muffler
-tile.extrautils:sound_muffler.1.name=Rain Muffler
-tile.extrautils:spike_base.name=Iron Spike
-tile.extrautils:timer.name=Redstone Clock
-tile.extrautils:trading_post.name=Trading Post
-tile.extrautils:trashcan.name=Trash Can
-tile.extrautils:block_bedrockium.name=Block of Bedrockium
+tile.extrautils:magnumTorch.name=Magnumfackel
+tile.extrautils:peaceful_table_top.name=Friedlichkeitstisch
+tile.extrautils:pipes.0.name=Transferrohr
+tile.extrautils:pipes.10.name=Rationierungsrohr
+tile.extrautils:pipes.11.name=Energierohr
+tile.extrautils:pipes.12.name=Überkreuzrohr
+tile.extrautils:pipes.13.name=Mod-Sortierrohr
+tile.extrautils:pipes.14.name=Energieextraktionsrohr
+tile.extrautils:pipes.8.name=Sortierrohr
+tile.extrautils:pipes.9.name=Filterrohr
+tile.extrautils:plant/ender_lilly.name=Enderliliensamen
+tile.extrautils:sound_muffler.0.name=Schalldämpfer
+tile.extrautils:sound_muffler.1.name=Regendämpfer
+tile.extrautils:spike_base.name=Eisenstacheln
+tile.extrautils:timer.name=Redstone-Clock
+tile.extrautils:trading_post.name=Handelsposten
+tile.extrautils:trashcan.name=Mülltonne
+tile.extrautils:block_bedrockium.name=Bedrockiumblock
 
 
-tile.extrautils:endConstructor.2.name=Ender-Flux Crystal
+tile.extrautils:endConstructor.2.name=Enderfluxkristall
 
 tile.extrautils:qed.rand.0.name=QED (Quantum Entanglement Device)
 tile.extrautils:qed.rand.1.name=QED (Quantum Ender Device)
