--- a/lang/en_PT.lang
+++ b/lang/en_PT.lang
@@ -11,7 +11,7 @@ item.extrautils:angelRing.1.name=Wings o' Davy Jones!
 item.extrautils:angelRing.2.name=I be a pretty pink Pirate!
 item.extrautils:angelRing.3.name=Wings o' the sky serpents
 item.extrautils:angelRing.4.name=Wings o' Booty
-item.extrautils:angelRing.5.name=Wings o' the Karken's Lair
+item.extrautils:angelRing.5.name=Wings o' the Kraken's Lair
 item.extrautils:bedrockiumIngot.name=Har'est Metal Bullion
 item.extrautils:builderswand.name=Fast Ship Builder
 item.extrautils:creativebuilderswand.name=Super-fast Ship Builder
@@ -278,7 +278,7 @@ tile.extrautils:enderQuarry.info.0=The Ender quarry is an automated mining syste
 tile.extrautils:enderQuarry.info.1=In order to use the quarry, you have to first manually make a boundary using fences (either wooden, nether-brick or 'micro-block' fences). Once placed, the entire fence boundary must be rectangular with no gaps or intersections. The fence boundary can go up or down at a single spot if you stack fences on top of each other. Once complete, remove a fence post, place the quarry and right-click.
 tile.extrautils:enderQuarry.info.2=If all is done correctly, the quarry will start mining. It will mine vertically, and will complete each 'chunk' before moving on to the next one. The quarry will self-chunk load, and only keeps two chunks in memory at any point in time (because of this there is no 'max' size.
 tile.extrautils:enderThermicPump.info.0=The ender-thermal pump is a low-lag liquid pump designed specifically for lava. When it pumps up a lava source block, it instantly replaces it with stone and doesn't cause a block-update. It also acts as a chunk-loader, keeping itself and the bare minimum of chunks loaded in order to pump lava while preventing lighting glitches.
-tile.extrautils:enderThermicPump.info.1=It's doesn't eliminate lag entirely (it's the nether) but hopefully it should help if you've been having issues.  Mechanically, It functions exactly the same as a buildcraft pump in terms of power and output.
+tile.extrautils:enderThermicPump.info.1=It's doesn't eliminate lag entirely (it's the nether) but hopefully it should help if you've been having issues.  Mechanically, It functions exactly the same as a buildem up fastercraft pump in terms of power and output.
 tile.extrautils:enderThermicPump.info.2=The only major difference is that it MUST be placed just above the surface level of the lava lake, although since It can pump through solid blocks it doesn't need to be directly placed over the lava itself.  Note: To prevent greifing the ender-thermal pump will, by default, only work in the nether, but this be changed in the config.
 tile.extrautils:etherealglass.info=This magical glass can be passed through by players with ease but provides a completely solid barrier to anything else. If are sneaking, the block will be solid to you.
 tile.extrautils:extractor_base.0.info=Transfer nodes pull items from their connected inventory and will search through a transfer pipe system for inventories to place the item into. They will insert as much as possible into each inventory they find and will continue until they hit a dead end or the internal buffer is empty.
