Curse of Monkey Island reference restored

--- a/lang/en_PT.lang
+++ b/lang/en_PT.lang
@@ -7,7 +7,7 @@ death.attack.divbyzero=%1$s was keelhauled for messin' with ye laws of numberrrs
 
 item.extrautils:angelRing.name=Ring o' Not Fallin'
 item.extrautils:angelRing.0.name=Where be me wings?
-item.extrautils:angelRing.1.name=Wings o' Davy Jones!
+item.extrautils:angelRing.1.name=Wings o' El Pollo Diablo!
 item.extrautils:angelRing.2.name=I be a pretty pink Pirate!
 item.extrautils:angelRing.3.name=Wings o' the sky serpents
 item.extrautils:angelRing.4.name=Wings o' Booty
