Added localizations for alternate Ethereal Glass.

--- a/lang/de_DE.lang
+++ b/lang/de_DE.lang
@@ -147,7 +147,7 @@ tile.extrautils:drum.1.name=Bedrockiumtrommel
 tile.extrautils:enderQuarry.name=Endersteinbruch
 tile.extrautils:enderThermicPump.name=Ender-Thermiepumpe
 tile.extrautils:endMarker.name=Ender-Marker
-tile.extrautils:etherealglass.name=Ätherisches Glas
+tile.extrautils:etherealglass.0.name=Ätherisches Glas
 tile.extrautils:extractor_base.0.name=Transfernodie (Items)
 tile.extrautils:extractor_base.12.name=Transfernodie (Energie)
 tile.extrautils:extractor_base.6.name=Transfernodie (Flüssigkeiten)
