--- a/lang/en_PT.lang
+++ b/lang/en_PT.lang
@@ -143,7 +143,9 @@ tile.extrautils:drum.1.name=Bigger Drum for me Rum
 tile.extrautils:enderQuarry.name=Tall-Men Digging Crew
 tile.extrautils:enderThermicPump.name=Tall-Men Pumping Crew
 tile.extrautils:endMarker.name=Tall-Man's Pirate Flag
-tile.extrautils:etherealglass.name=Haunted Crystal
+tile.extrautils:etherealglass.0.name=Haunted Crystal
+tile.extrautils:etherealglass.1.name=Haunted Shiny Crystal
+tile.extrautils:etherealglass.2.name=Dark Haunted Crystal
 tile.extrautils:extractor_base.0.name=Transfer Device (Treasure)
 tile.extrautils:extractor_base.12.name=Transfer Device (Lightnin')
 tile.extrautils:extractor_base.6.name=Transfer Device (Bilgewater)
