--- a/lang/en_US.lang
+++ b/lang/en_US.lang
@@ -146,7 +146,9 @@ tile.extrautils:drum.1.name=Bedrockium Drum
 tile.extrautils:enderQuarry.name=Ender Quarry
 tile.extrautils:enderThermicPump.name=Ender-Thermic Pump
 tile.extrautils:endMarker.name=Ender-Marker
-tile.extrautils:etherealglass.name=Ethereal Glass
+tile.extrautils:etherealglass.0.name=Ethereal Glass
+tile.extrautils:etherealglass.1.name=Ineffable Glass
+tile.extrautils:etherealglass.2.name=Dark Ethereal Glass
 tile.extrautils:extractor_base.0.name=Transfer Node (Items)
 tile.extrautils:extractor_base.12.name=Transfer Node (Energy)
 tile.extrautils:extractor_base.6.name=Transfer Node (Liquids)
