--- a/lang/ru_RU.lang
+++ b/lang/ru_RU.lang
@@ -146,7 +146,7 @@ tile.extrautils:drum.1.name=(барабан из бедрокия)
 tile.extrautils:enderQuarry.name=Карьер Края
 tile.extrautils:enderThermicPump.name=Края-термическая помпа
 tile.extrautils:endMarker.name=Маркер Края
-tile.extrautils:etherealglass.name=Эфирное стекло
+tile.extrautils:etherealglass.0.name=Эфирное стекло
 tile.extrautils:extractor_base.0.name=Узел передачи (Предметы)
 tile.extrautils:extractor_base.12.name=Узел передачи (Энергия)
 tile.extrautils:extractor_base.6.name=Узел передачи (Жидкости)
