--- a/lang/zh_CN.lang
+++ b/lang/zh_CN.lang
@@ -147,7 +147,7 @@ tile.extrautils:drum.1.name=基岩筒
 tile.extrautils:enderQuarry.name=末影采石场
 tile.extrautils:enderThermicPump.name=末影岩浆泵
 tile.extrautils:endMarker.name=末影标记仪
-tile.extrautils:etherealglass.name=天域玻璃
+tile.extrautils:etherealglass.0.name=天域玻璃
 tile.extrautils:extractor_base.0.name=传输节点(物品)
 tile.extrautils:extractor_base.12.name=传输节点(能量)
 tile.extrautils:extractor_base.6.name=传输节点(流体)
