Added heating coil language entry

--- a/lang/en_US.lang
+++ b/lang/en_US.lang
@@ -24,6 +24,7 @@ item.extrautils:erosionShovel.name=Erosion Shovel
 item.extrautils:ethericsword.name=Etheric Sword
 item.extrautils:golden_bag.name=Golden Bag of Holding
 item.extrautils:golden_lasso.name=Golden Lasso
+item.extrautils:heatingElement.name=Heating Coil
 item.extrautils:microblocks.0.name=Pipe Jacket
 item.extrautils:microblocks.1.name=Fence
 item.extrautils:microblocks.2.name=Wall
