--- a/lang/ru_RU.lang
+++ b/lang/ru_RU.lang
@@ -19,14 +19,14 @@ item.extrautils:defoliageAxe.name=Исцеляющий топор
 item.extrautils:destructionpickaxe.name=Разрушающая кирка
 item.extrautils:divisionSigil.name=Сигил деления
 item.extrautils:divisionSigil.active.name=Сигил деления (Активированный)
-item.extrautils:divisionSigil.stable.name=Pseudo-Inversion Sigil
+item.extrautils:divisionSigil.stable.name=Сигил деления (Стабильный)
 item.extrautils:erosionShovel.name=Эрозийная лопата
 item.extrautils:ethericsword.name=Эфирный меч
 item.extrautils:golden_bag.name=Золотой мешочек удержания
 item.extrautils:golden_lasso.name=Золотое лассо
-item.extrautils:microblocks.0.name=Pipe Jacket
-item.extrautils:microblocks.1.name=Fence
-item.extrautils:microblocks.2.name=Wall
+item.extrautils:microblocks.0.name=Обшивка трубы
+item.extrautils:microblocks.1.name=Забор
+item.extrautils:microblocks.2.name=Ограда
 item.extrautils:microblocks.3.name=Impossible Object
 item.extrautils:mini-soul.name=Фрагмент души
 item.extrautils:nodeUpgrade.0.name=Улучшение скорости
@@ -124,10 +124,10 @@ tile.extrautils:decorativeBlock1.11.name=Ядро Края
 tile.extrautils:decorativeBlock1.12.name=Вычислительная матрица, выгравированная алмазом
 tile.extrautils:decorativeBlock1.2.name=Сгоревший кварц
 tile.extrautils:decorativeBlock1.3.name=Замороженный камень
-tile.extrautils:decorativeBlock1.4.name=Border Stone
+tile.extrautils:decorativeBlock1.4.name=Бордюрный камень
 tile.extrautils:decorativeBlock1.5.name=Блок из нестабильного слитка
 tile.extrautils:decorativeBlock1.6.name=Гравиевый кирпич
-tile.extrautils:decorativeBlock1.7.name=Border Stone (Alternate)
+tile.extrautils:decorativeBlock1.7.name=Бордурный камень (Альтернативный)
 tile.extrautils:decorativeBlock1.8.name=Магическая древесина
 tile.extrautils:decorativeBlock1.9.name=Песчаное стекло
 tile.extrautils:decorativeBlock2.0.name=Утолщённое стекло
@@ -137,9 +137,9 @@ tile.extrautils:decorativeBlock2.2.name=Стеклянный кирпич
 tile.extrautils:decorativeBlock2.3.name=Резное стекло
 tile.extrautils:decorativeBlock2.4.name=Золотое заострённое стекло
 tile.extrautils:decorativeBlock2.5.name=Обсидиановое стекло
-tile.extrautils:decorativeBlock2.6.name=Swirling Glass
+tile.extrautils:decorativeBlock2.6.name=Вихревое стекло
 tile.extrautils:decorativeBlock2.7.name=Светящиеся стекло
-tile.extrautils:decorativeBlock2.8.name=Heart Glass
+tile.extrautils:decorativeBlock2.8.name=Любовное стекло
 tile.extrautils:decorativeBlock2.9.name=Квадратное стекло
 tile.extrautils:drum.0.name=(барабан)
 tile.extrautils:drum.1.name=(барабан из бедрокия)
@@ -174,7 +174,7 @@ tile.extrautils:pipes.0.name=Труба для передачи
 tile.extrautils:pipes.10.name=Труба рационирования
 tile.extrautils:pipes.11.name=Энергетическая труба
 tile.extrautils:pipes.12.name=Перекрёстная труба
-tile.extrautils:pipes.13.name=Mod Sorting Pipe
+tile.extrautils:pipes.13.name=Труба для сортировки по модам
 tile.extrautils:pipes.14.name=Труба для извлечения энергии
 tile.extrautils:pipes.8.name=Сортирующая труба
 tile.extrautils:pipes.9.name=Фильтрующая труба
