--- a/lang/zh_CN.lang
+++ b/lang/zh_CN.lang
@@ -168,7 +168,25 @@ tile.extrautils:generator.6.name=药水发电机
 tile.extrautils:generator.7.name=太阳能发电机
 tile.extrautils:generator.8.name=TNT发电机
 tile.extrautils:generator.9.name=粉之发电机
-tile.extrautils:greenscreen.name=绿屏
+
+tile.extrautils:greenscreen.name=郁茵之纯色光屏(绿)
+tile.extrautils:greenscreen.0.name=苍雪之纯色光屏(白)
+tile.extrautils:greenscreen.1.name=橘夕之纯色光屏(橙)
+tile.extrautils:greenscreen.2.name=晶朱之纯色光屏(品红)
+tile.extrautils:greenscreen.3.name=碧空之纯色光屏(浅蓝)
+tile.extrautils:greenscreen.4.name=金华之纯色光屏(黄)
+tile.extrautils:greenscreen.5.name=茂林之纯色光屏(绿)
+tile.extrautils:greenscreen.6.name=豆蔻之纯色光屏(粉)
+tile.extrautils:greenscreen.7.name=烬余之纯色光屏(灰)
+tile.extrautils:greenscreen.8.name=辉铁之纯色光屏(浅灰)
+tile.extrautils:greenscreen.9.name=阳春之纯色光屏(青)
+tile.extrautils:greenscreen.10.name=黯霞之纯色光屏(紫)
+tile.extrautils:greenscreen.11.name=蔚水之纯色光屏(蓝)
+tile.extrautils:greenscreen.12.name=陶野之纯色光屏(棕)
+tile.extrautils:greenscreen.13.name=阴毒之纯色光屏(深绿)
+tile.extrautils:greenscreen.14.name=赤梦之纯色光屏(红)
+tile.extrautils:greenscreen.15.name=永夜之纯色光屏(黑)
+
 tile.extrautils:magnumTorch.name=卓越火炬
 tile.extrautils:peaceful_table_top.name=和平之桌
 tile.extrautils:pipes.0.name=运输管道
@@ -208,3 +226,32 @@ tile.extrautils:qed.rand.13.name=QED(鹌鹑吞鸭子方块Quail Eating Ducks)
 tile.extrautils:qed.rand.14.name=QED(类星纠缠设备Quasar Entanglement Device)
 tile.extrautils:qed.rand.15.name=QED(相当贵饰品Quite Expensive Decoration)
 tile.extrautils:qed.rand.16.name=QED(量子放射解码器Quantum Emission Decompiler)
+
+item.extrautils:angelRing.info=天使指环者，魔器也，注以御空之能。佩诸身则苍穹任之遨游而无怠。
+item.extrautils:bedrockiumIngot.info=此物之韧，世间难有，尖刀利斧加身而百害莫侵。虽冠以基岩之名，亦具参差之能，奈何实非基岩，蛮力无穷亦可破之。
+item.extrautils:builderswand.info=右击某方块，则遍历物品栏所有方块，以验同类。以执杖者面朝之向，耗费物品栏中同类方块延之，一次消耗莫大于九。
+item.extrautils:defoliageAxe.info=以己身性命渡救斧斫之目标，伴以轻微加成。不死生物莫能受之，反得四倍之害。而身怀慈悲之斧，不患饥馑之苦。
+item.extrautils:destructionpickaxe.info=用以掘寻常土石，迅如疾风，五倍于钻石镐，掘他物则缓若凿以徒手。凡所掘之物，正如其名，尽毁于无。而不朽不坏，恒久远，永流传。
+item.extrautils:divisionSigil.info.0=魔器诡异，工艺天下莫知，浩渺难寻，偶见于地牢宝箱。天然质朴之貌，实不堪用，须祭以秘法，以唤沉睡之能。此法古奥，名曰“活化仪式”。
+item.extrautils:divisionSigil.info.1=徽记法用其一，祛除物品附魔。于合成台中，徽记之上下放置附魔物品，将参照下方物品之魔力兼等级移除上方物品附魔。如击退II之剑置之上，击退I之书置之下，得击退I之剑。
+item.extrautils:divisionSigil.info.2=若以未加附魔之物置于徽记下，则上方物品之附魔全数下降一级，而上方宝剑之伤害亦可提升四之有一。
+item.extrautils:divisionSigil.info.3=活化仪式甚繁，如惑，可以潜行之态右击附魔台，则必告所需。宜着甲胄以防不测。
+item.extrautils:divisionSigil.info.4=折叠: 详情阅诸后文。
+item.extrautils:divisionSigil.info.5=露天置附魔台于大片草地泥土上，八角洒以红石。
+item.extrautils:divisionSigil.info.6=仪式须牺牲一生灵以祭，动物怪物抑或玩家皆可。可辅以黄金套索捕之。熄灭周遭灯火，而待巫异时刻，独徽记辉光照人。
+item.extrautils:divisionSigil.info.7=当其时也，祭坛黯然，屠生灵于其上或邻边，以全仪式。既唤徽记沉睡之能，亦当承其诅咒大地之恶果。
+item.extrautils:erosionShovel.info=用以掘柔泥软沙，则迅如疾风，其上之沙子沙砾亦并除之，类毁灭之镐，所掘尽毁于无，无甚掉落。亦不毁不朽。
+item.extrautils:ethericsword.info=锋利犹胜钻石剑，而不朽不坏。
+item.extrautils:golden_bag.info=此袋虽小，内有乾坤拟比大箱，且方便易携，任由天地，右击开启。
+item.extrautils:golden_lasso.info=牛突羊奔，诱以小麦，狼狈劳苦，未必有得。持黄金套索对之，右击收诸内，再击放诸外。牛倌之事，从此易哉。
+item.extrautils:microblocks.0.info=管道夹套者，迷你方块所造之装饰包层也，可用于兼容FMP之一切管道。以术观之，管道当居中央之槽。
+item.extrautils:microblocks.1.info=迷你方块所造之栅栏。
+item.extrautils:nodeUpgrade.0.info=节点升级:速度提升可增加传输节点每秒操作数，最大可达六十四次每秒。
+
+tile.extrautils:sound_muffler.0.info=近羊圈牛舍之地，噪杂之声不绝于耳，欲噤其声而不得。消音器者，方圆8格内弱声效九成，汝可凭之安享静谧。
+tile.extrautils:sound_muffler.1.info=消音器而彷若无雨者，以之为中心方圆64格内皆无雨声。欲更甚，可右击以获魔法羊毛，堵之于耳，则天下雨声皆然不闻。此效用不论他人，死后方无。
+tile.extrautils:spike_base.info=巨刺锐利，不幸触之者皆受大害。虽然，只伤生物，而存其罕有之掉落。以之杀敌无以获经验。
+tile.extrautils:timer.info=简约廉价之器，每秒发出一红石脉冲。
+tile.extrautils:trading_post.info=欲寻价廉物美之器，莫过于求诸互通有无。右击贸易站，观左近氓黎，而有贸易之需者。点击所选，即可与之交易。
+tile.extrautils:trashcan.info.0=囊内若充泥土瓦石等无用物，可以垃圾桶销之，既便且捷也。右击以启，掷所弃于内，或径潜行右击，皆可，妙哉一瞬可销万物，最妙莫过于毫无迟滞。
+tile.extrautils:trashcan.info.1=管道漏斗皆可加诸其上，以自动销毁所输。置入已编程之物品过滤器则仅毁匹配之物。
