--- a/lang/ko_kr.lang
+++ b/lang/ko_kr.lang
@@ -206,3 +206,10 @@ tile.extrautils:block_bedrockium.name=베드라키움 블럭
 
 item.extrautils:angelRing.documentation=천사의 고리는 비행의 힘이 담겨있는 마법적 물품입니다. 인벤토리에 천사의 고리를 소지하면 영구적인 비행 능력을 얻을 수 있습니다.
 item.extrautils:bedrockiumIngot.documentation=알려진 것 중 가장 단단한 물질인 베드라키움은, 물리적으로 가능한 가장 강력한 충격도 버텨낼 수 있습니다. 이름이 기반암을 따서 명명되었고, 성질도 닮아있지만, 진짜 기반암이 아니므로 많은 압력을 받으면 손상되거나 부서질 수 있습니다.
+item.extrautils:builderswand.documentation=오른쪽 클릭한 블록과 같은 블록을 인벤토리에서 찾아 오른쪽 클릭한 면을 기준으로 보유중인 블록을 새로 설치합니다. 한번에 9블록까지 설치할 수 있습니다.
+item.extrautils:defoliageAxe.documentation=생물체를 공격할 때, 약간의 허기를 소모하고 공격한 대상을 즉시 회복시킵니다. 또한, 언데드를 공격할 때에는 허기 소모량의 4배의 데미지를 줍니다. 그리고 착용하고 있을 때 허기를 조금씩 채워줍니다.
+item.extrautils:destructionpickaxe.documentation=돌을 부술 때 다이아몬드 곡괭이의 5배의 속도를 내지만, 이외의 블록들은 손으로 부수는 것보다 느립니다. 또한, 어떠한 블록을 부숴도 얻을 수 없습니다. 용도에 맞게 사용될 때 내구도가 무한합니다.
+item.extrautils:erosionShovel.documentation=흙과 모래, 자갈을 매우 빠르게 부술 수 있습니다. 어떠한 블록을 부숴도 얻을 수 없습니다. 용도에 맞게 사용될 때 내구도가 무한합니다.
+item.extrautils:ethericsword.documentation=다이아몬드 검보다 약간 더 강력하고 내구도가 무한합니다.
+item.extrautils:golden_bag.documentation=이 작은 가방은 상자 2개 분량의 저장량을 가지고 있고 어디서든 물품을 넣고 꺼낼 수 있습니다. 마우스 우클릭으로 가방을 엽니다.
+item.extrautils:golden_lasso.documentation=황금 올가미를 들고 있는 상태로 골렘을 포함한, 비공격적인 생물체를 마우스 우클릭 하면 황금 올가미 안에 생물체가 저장됩니다. 생물체가 저장된 상태로 지면을 마우스 우클릭 하면 저장된 생물체를 풀어놓습니다.
