--- a/lang/en_US.lang
+++ b/lang/en_US.lang
@@ -3,7 +3,7 @@ gui.transferNode=Transfer Node
 
 death.attack.darkness.player=%1$s was consumed by shadows while fighting %2$s
 death.attack.darkness=%1$s was consumed by shadows
-death.attack.divbyzero=%1$s suffered a fatal 'java.lang.ArithmeticException: \ by diamond'
+death.attack.divbyzero=%1$s suffered a fatal 'java.lang.ArithmeticException: / by diamond'
 
 item.extrautils:angelRing.name=Angel Ring
 item.extrautils:angelRing.0.name=Invisible Wings
