Add newer localizations

--- a/lang/en_US.lang
+++ b/lang/en_US.lang
@@ -5,6 +5,8 @@ death.attack.darkness.player=%1$s was consumed by shadows while fighting %2$s
 death.attack.darkness=%1$s was consumed by shadows
 death.attack.divbyzero=%1$s suffered a fatal 'java.lang.ArithmeticException: \ by diamond'
 
+power.drain=Power Drain Multiplier: x%1$s
+
 item.extrautils:angelRing.name=Angel Ring
 item.extrautils:angelRing.0.name=Invisible Wings
 item.extrautils:angelRing.1.name=Feathery Wings
@@ -14,7 +16,7 @@ item.extrautils:angelRing.4.name=Golden Wings
 item.extrautils:angelRing.5.name=Dark Wings
 item.extrautils:bedrockiumIngot.name=Bedrockium Ingot
 item.extrautils:builderswand.name=Builder's Wand
-item.extrautils:creativebuilderswand.name=Creative Builder's Wand
+item.extrautils:creativebuilderswand.name=Super Builder's Wand
 item.extrautils:defoliageAxe.name=Healing Axe
 item.extrautils:destructionpickaxe.name=Destruction Pickaxe
 item.extrautils:divisionSigil.name=Division Sigil
@@ -51,7 +53,12 @@ item.extrautils:watering_can.busted.name=Watering Can (Broken)
 item.extrautils:watering_can.empty.name=Watering Can (Empty)
 item.extrautils:watering_can.reinforced.name=Watering Can (Reinforced)
 item.extrautils:watering_can.name=Watering Can
+item.extrautils:lawSword.name=Kikoku
+item.extrautils:lawSword.tooltip=Cursed Blade (WIP)
 
+
+attribute.name.extrautils.armorPiercingAttackDamage=Armor Piercing Damage
+attribute.name.extrautils.godSlayingAttackDamage=Divine Damage
 
 
 
@@ -62,39 +69,23 @@ itemGroup.extraUtil_FMP=Extra Utilities Microblocks
 tile.extrautils:angelBlock.name=Angel Block
 tile.extrautils:budoff.0.name=Block Update Detector
 tile.extrautils:budoff.3.name=Block Update Detector (Advanced)
-tile.extrautils:colorStoneBrick.0.name=Colored Stone Bricks (White)
-tile.extrautils:colorStoneBrick.1.name=Colored Stone Bricks (Orange)
-tile.extrautils:colorStoneBrick.2.name=Colored Stone Bricks (Magenta)
-tile.extrautils:colorStoneBrick.3.name=Colored Stone Bricks (Light Blue)
-tile.extrautils:colorStoneBrick.4.name=Colored Stone Bricks (Yellow)
-tile.extrautils:colorStoneBrick.5.name=Colored Stone Bricks (Lime)
-tile.extrautils:colorStoneBrick.6.name=Colored Stone Bricks (Pink)
-tile.extrautils:colorStoneBrick.7.name=Colored Stone Bricks (Gray)
-tile.extrautils:colorStoneBrick.8.name=Colored Stone Bricks (Light Gray)
-tile.extrautils:colorStoneBrick.9.name=Colored Stone Bricks (Cyan)
-tile.extrautils:colorStoneBrick.10.name=Colored Stone Bricks (Purple)
-tile.extrautils:colorStoneBrick.11.name=Colored Stone Bricks (Blue)
-tile.extrautils:colorStoneBrick.12.name=Colored Stone Bricks (Brown)
-tile.extrautils:colorStoneBrick.13.name=Colored Stone Bricks (Green)
-tile.extrautils:colorStoneBrick.14.name=Colored Stone Bricks (Red)
-tile.extrautils:colorStoneBrick.15.name=Colored Stone Bricks (Black)
 
-tile.extrautils:colorWoodPlanks.0.name=Colored Wood Planks (White)
-tile.extrautils:colorWoodPlanks.1.name=Colored Wood Planks (Orange)
-tile.extrautils:colorWoodPlanks.2.name=Colored Wood Planks (Magenta)
-tile.extrautils:colorWoodPlanks.3.name=Colored Wood Planks (Light Blue)
-tile.extrautils:colorWoodPlanks.4.name=Colored Wood Planks (Yellow)
-tile.extrautils:colorWoodPlanks.5.name=Colored Wood Planks (Lime)
-tile.extrautils:colorWoodPlanks.6.name=Colored Wood Planks (Pink)
-tile.extrautils:colorWoodPlanks.7.name=Colored Wood Planks (Gray)
-tile.extrautils:colorWoodPlanks.8.name=Colored Wood Planks (Light Gray)
-tile.extrautils:colorWoodPlanks.9.name=Colored Wood Planks (Cyan)
-tile.extrautils:colorWoodPlanks.10.name=Colored Wood Planks (Purple)
-tile.extrautils:colorWoodPlanks.11.name=Colored Wood Planks (Blue)
-tile.extrautils:colorWoodPlanks.12.name=Colored Wood Planks (Brown)
-tile.extrautils:colorWoodPlanks.13.name=Colored Wood Planks (Green)
-tile.extrautils:colorWoodPlanks.14.name=Colored Wood Planks (Red)
-tile.extrautils:colorWoodPlanks.15.name=Colored Wood Planks (Black)
+tile.extrautils:colorBlock.0.name=Colored BLOCKNAME (White Frequency)
+tile.extrautils:colorBlock.1.name=Colored BLOCKNAME (Orange Frequency)
+tile.extrautils:colorBlock.2.name=Colored BLOCKNAME (Magenta Frequency)
+tile.extrautils:colorBlock.3.name=Colored BLOCKNAME (Light Blue Frequency)
+tile.extrautils:colorBlock.4.name=Colored BLOCKNAME (Yellow Frequency)
+tile.extrautils:colorBlock.5.name=Colored BLOCKNAME (Lime Frequency)
+tile.extrautils:colorBlock.6.name=Colored BLOCKNAME (Pink Frequency)
+tile.extrautils:colorBlock.7.name=Colored BLOCKNAME (Gray Frequency)
+tile.extrautils:colorBlock.8.name=Colored BLOCKNAME (Light Gray Frequency)
+tile.extrautils:colorBlock.9.name=Colored BLOCKNAME (Cyan Frequency)
+tile.extrautils:colorBlock.10.name=Colored BLOCKNAME (Purple Frequency)
+tile.extrautils:colorBlock.11.name=Colored BLOCKNAME (Blue Frequency)
+tile.extrautils:colorBlock.12.name=Colored BLOCKNAME (Brown Frequency)
+tile.extrautils:colorBlock.13.name=Colored BLOCKNAME (Green Frequency)
+tile.extrautils:colorBlock.14.name=Colored BLOCKNAME (Red Frequency)
+tile.extrautils:colorBlock.15.name=Colored BLOCKNAME (Black Frequency)
 
 tile.extrautils:chandelier.name=Chandelier
 
@@ -145,6 +136,16 @@ tile.extrautils:decorativeBlock2.9.name=Square Glass
 tile.extrautils:drum.0.name=Drum
 tile.extrautils:drum.1.name=Bedrockium Drum
 tile.extrautils:enderQuarry.name=Ender Quarry
+tile.extrautils:enderQuarryUpgrade.0.name=Ender Quarry Upgrade Base
+tile.extrautils:enderQuarryUpgrade.1.name=Ender Quarry World Hole Upgrade
+tile.extrautils:enderQuarryUpgrade.2.name=Ender Quarry Silk Touch Upgrade
+tile.extrautils:enderQuarryUpgrade.3.name=Ender Quarry Fortune I Upgrade
+tile.extrautils:enderQuarryUpgrade.4.name=Ender Quarry Fortune II Upgrade
+tile.extrautils:enderQuarryUpgrade.5.name=Ender Quarry Fortune III Upgrade
+tile.extrautils:enderQuarryUpgrade.6.name=Ender Quarry Speed I Upgrade
+tile.extrautils:enderQuarryUpgrade.7.name=Ender Quarry Speed II Upgrade
+tile.extrautils:enderQuarryUpgrade.8.name=Ender Quarry Speed III Upgrade
+tile.extrautils:enderQuarryUpgrade.9.name=Ender Quarry Pump Upgrade
 tile.extrautils:enderThermicPump.name=Ender-Thermic Pump
 tile.extrautils:endMarker.name=Ender-Marker
 tile.extrautils:etherealglass.0.name=Ethereal Glass
@@ -152,6 +153,7 @@ tile.extrautils:etherealglass.1.name=Ineffable Glass
 tile.extrautils:etherealglass.2.name=Dark Ethereal Glass
 tile.extrautils:extractor_base.0.name=Transfer Node (Items)
 tile.extrautils:extractor_base.12.name=Transfer Node (Energy)
+tile.extrautils:extractor_base.13.name=Transfer Node (Hyper Energy)
 tile.extrautils:extractor_base.6.name=Transfer Node (Liquids)
 tile.extrautils:extractor_base_remote.0.name=Retrieval Node (Items)
 tile.extrautils:extractor_base_remote.6.name=Retrieval Node (Liquids)
@@ -204,6 +206,9 @@ tile.extrautils:plant/ender_lilly.name=Ender-Lily Seeds
 tile.extrautils:sound_muffler.0.name=Sound Muffler
 tile.extrautils:sound_muffler.1.name=Rain Muffler
 tile.extrautils:spike_base.name=Iron Spike
+tile.extrautils:spike_base_gold.name=Golden Spike
+tile.extrautils:spike_base_diamond.name=Diamond Spike
+tile.extrautils:spike_base_wood.name=Wooden Spike
 tile.extrautils:timer.name=Redstone Clock
 tile.extrautils:trading_post.name=Trading Post
 tile.extrautils:trashcan.name=Trash Can
@@ -272,7 +277,7 @@ item.extrautils:sonar_goggles.documentation.0=A boon to miners to help ensure yo
 item.extrautils:sonar_goggles.documentation.1=This means that you will be able to 'see' other blocks by their absence. The goggles require the user to be in a darkened area to function (the darker the better).
 item.extrautils:temporalHoe.documentation=Will regress your wheat crops back to a previous state when you right click on them, which is not useful in any way, shape or form. However, it can turn dirt blocks back into grass and cobblestone into regular stone.
 item.extrautils:unstableingot.0.documentation.0=Have you ever tried to divided by diamond?  Of course not, because you're a sane and rational person who would never do something so foolhardedly dangerous.
-item.extrautils:unstableingot.0.documentation.1=However, should you experience a brief moment of insanity, you can craft unstable ingots. These ingots are existentially unstable and have 10 seconds before they explode in your inventory. They also explode if you leave the crafting gui or if they are thrown on the floor. Do not craft unless ready.
+item.extrautils:unstableingot.0.documentation.1=However, should you experience a brief moment of instanity, you can craft unstable ingots. These ingots are existentially unstable and have 10 seconds before they explode in your inventory. They also explode if you leave the crafting gui or if they are thrown on the floor. Do not craft unless ready.
 item.extrautils:unstableingot.0.documentation.2=Now you're probably wondering why you should bother crafting these dangerous ingots well, here's what you can create with them. Unlike the ingots these tools are stable and won't explode. Just remember you have to craft them in under 10 seconds, or else boom.
 item.extrautils:unstableingot.1.documentation=This tiny nugget is small enough to contain the powerful energies produced by dividing by diamond. You can use these to craft a 'stable' unstable ingot that will not explode.
 item.extrautils:watering_can.documentation.0=Plants and crops require lots of love and attention but did you know that the mere act of standing there sprinkling them with water is enough to inspire them to grow at a much faster rate? Craft the watering can, fill it with water and you have an early-game alternative to bone-meal that will get you plenty of food in no time some time.
@@ -313,7 +318,7 @@ tile.extrautils:extractor_base_remote.0.documentation=Retrieval nodes traverse t
 tile.extrautils:extractor_base_remote.6.documentation=Retrieval nodes traverse the pipe system pulling liquids out of tanks rather than inserting. They will only pull 200mB out at a time (unless upgraded) and will not move on from a tank until it can't pull anymore out.
 tile.extrautils:filing.0.documentation=The filing cabinet provides a convenient storage container for items that do not stack. The basic Filing Cabinet holds 270items, however the items must all be of the same type (i.e. same item ID) but can have different properties (damage values/enchantments/etc.). The filing cabinet will keep the items alphabetically sorted within the interface for handy retrieval.
 tile.extrautils:filing.1.documentation=The filing cabinet provides a convenient storage container for items that do not stack. The advanced Filing Cabinet holds 540items and will accept items regardless of type. The filing cabinet will keep the items alphabetically sorted within the interface for handy retrieval.
-tile.extrautils:generator.0.documentation=Generates RF using regular furnace fuel. It has a very low energy output but is surprisingly efficient and fuel lasts 20 times the base rate.
+tile.extrautils:generator.0.documentation=Generates RF using regular furnace fuel. It has a very low energy output but is surprisingly efficient and fuel lasts much longer.
 tile.extrautils:generator.1.documentation=Generates RF using regular furnace fuel.
 tile.extrautils:generator.10.documentation=Generates RF using regular furnace fuel. A very inefficient generator with an initially low energy output, but as the internal temperature rises its energy output rises.
 tile.extrautils:generator.11.documentation=Generates RF using nether stars. Incredibly powerful generator that produces more energy than most systems can transferBC. It will damage anything in a 10 block radius.
